Adição de novo case de uso 'deleteSpecification'
