# src/shared/infra/http/routes/specifications.routes.ts
@@ -1,6 +1,7 @@
 import { Router } from "express";
 
 import { CreateSpecificationController } from "@modules/cars/useCases/createSpecification/createSpecificationController";
+import { DeleteSpecificationController } from "@modules/cars/useCases/deleteSpecification/DeleteSpecificationController";
 import { ListSpecificationsController } from "@modules/cars/useCases/listSpecifications/ListSpecificationController";
 
 import { ensureAdmin } from "../middlewares/ensureAdmin";
@@ -10,6 +11,7 @@ const specificationRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
 const listSpecificationController = new ListSpecificationsController();
+const deleteSpecificationController = new DeleteSpecificationController();
 
 specificationRoutes.post(
 	"/",
@@ -23,6 +25,13 @@ specificationRoutes.get(
 	ensureAuthenticated,
 	ensureAdmin,
 	listSpecificationController.handle
+);
+
+specificationRoutes.delete(
+	"/:id",
+	ensureAuthenticated,
+	ensureAdmin,
+	deleteSpecificationController.handle
 );
 
 export { specificationRoutes };
